<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/materiaFragment"
        android:title="@string/materias"/>
    <item android:id="@+id/professorFragment"
        android:title="@string/professores"/>
    <item android:id="@+id/perfilFragment"
        android:title="@string/meu_perfil"/>
    <item android:id="@+id/chamadaFragment"
        android:title="@string/chamada"/>
    <item android:id="@+id/acenoFragment"
        android:title="@string/reunir"/>
    <item android:id="@+id/abrirChamadaFragment"
        android:title="@string/abrir_chamada"/>
    <item android:id="@+id/materiaProfessorFragment"
        android:title="@string/materias"/>
    <item android:id="@+id/horarioFragment"
    android:title="@string/horaio"/>
</menu>