<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp">
        <TextView
            android:id="@+id/txSiglaMateriaProfessor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sigla"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:id="@+id/txNomeMateiraProfessor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_materia"
            app:layout_constraintTop_toBottomOf="@+id/txSiglaMateriaProfessor"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:id="@+id/txNomeProfessorMateriaProfessor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/professor"
            app:layout_constraintTop_toBottomOf="@+id/txNomeMateiraProfessor"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            />

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txNomeProfessorMateriaProfessor"
            app:layout_constraintStart_toStartOf="parent"
            android:enabled="false"
            android:text="@string/confirmar"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            />
        <Button
            android:id="@+id/btnAdiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txNomeProfessorMateriaProfessor"
            app:layout_constraintLeft_toRightOf="@+id/btnConfirmar"
            android:enabled="false"
            android:text="@string/adiar"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            />
        <Button
            android:id="@+id/btnAssumir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txNomeProfessorMateriaProfessor"
            app:layout_constraintLeft_toRightOf="@+id/btnAdiar"
            android:text="@string/assumir"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
