<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MateriaFragment">

    <TextView
        android:id="@+id/lbAcoesMateria"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/acoes"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btnSolicitarControle"/>

    <Button
        android:id="@+id/btnSolicitarControle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solicitar_controle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbAcoesMateria"/>

    <TextView
        android:id="@+id/txNomeMateiraInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnSolicitarControle"/>

    <TextView
        android:id="@+id/txNomeProfessorInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txNomeMateiraInfo"/>

    <TextView
        android:id="@+id/txHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txNomeProfessorInfo"/>

    <TextView
        android:id="@+id/lbAcoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acoes"
        app:layout_constraintTop_toBottomOf="@+id/txHorario"/>

    <RadioGroup
        android:id="@+id/rgAcoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lbAcoes">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adiar"
            android:checked="true"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"/>
    </RadioGroup>

    <TextView
        android:id="@+id/lbRecado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recado"
        app:layout_constraintTop_toBottomOf="@+id/rgAcoes"/>

    <EditText
        android:id="@+id/etxRecado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lbRecado"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        app:layout_constraintTop_toBottomOf="@+id/etxRecado"/>

</androidx.constraintlayout.widget.ConstraintLayout>